# rosita

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  dist-workspace.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  concepts.md  configuration.md  extending.md  implementation-plan.md  security.md  studio-design.md  testing.md
examples/: config.toml  global-config.toml  local.toml
examples/profiles/: rust.md.j2
skills/loadout-import-workflow/: SKILL.md  reference.md
skills/rosita-migrate/: SKILL.md
skills/rosita-remember/: SKILL.md  reference.md
src/: audit.rs  binding.rs  capability.rs  cli.rs  config.rs  dynamic.rs  fragment.rs  hash.rs  lib.rs  lint.rs  main.rs  pack.rs  profile.rs  redact.rs  report.rs  skills.rs  style.rs  sync.rs  target.rs  templates.rs  trust.rs  tui.rs  update.rs  workflow.rs  writer.rs
src/adapters/: commands.rs  mod.rs
src/commands/: bind.rs  clean.rs  detect.rs  doctor.rs  edit.rs  explain.rs  init.rs  introspect.rs  mod.rs  refresh.rs  render.rs  run.rs  skill.rs  sync.rs  trust.rs  update.rs
src/context/: commands.rs  git.rs  languages.rs  mod.rs  system.rs
src/providers/: ai_tools.rs  docker.rs  host.rs  mod.rs  tailnet.rs  toolchain.rs
src/render/: header.rs  mod.rs
src/studio/: assets.rs  edit.rs  mod.rs  server.rs  state.rs  views.rs
src/studio/assets/: studio.css  studio.js
templates/: overlay.md.j2
tests/: cli.rs  skill_examples.rs  studio.rs
