[package]
name = "rosita"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "rosita — direnv for AI coding agents: detect project context, select a profile, and render agent-specific instruction overlays."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ellery/rosita"
readme = "README.md"
keywords = ["cli", "ai", "agents", "context", "claude"]
categories = ["command-line-utilities", "development-tools"]

# The repo/project is "rosita"; the user-facing command is "rosita".
[[bin]]
name = "rosita"
path = "src/main.rs"

[lib]
name = "rosita"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minijinja = "2"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1"
tempfile = "3"
regex = "1"
gethostname = "0.5"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = "thin"
