[package]
name = "rosita"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "Inject global context into your AI coding agents: detect the project, select the profile that fits, and render an agent-specific instruction overlay."
license = "MIT"
repository = "https://github.com/elleryfamilia/rosita"
readme = "README.md"
keywords = ["cli", "ai", "agents", "context", "claude"]
categories = ["command-line-utilities", "development-tools"]

# The repo/project is "rosita"; the user-facing command is "rosita".
[[bin]]
name = "rosita"
path = "src/main.rs"

[lib]
name = "rosita"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Comment/format-preserving TOML editing for `rosita studio`'s write engine and
# the per-project binding writer (the plain `toml` crate cannot round-trip).
toml_edit = "0.22"
# Unified diffs for studio's stage→diff→apply review (wired up in a later slice).
similar = "2"
# studio's localhost web UI (blocking server, server-rendered HTML, embedded
# assets) — added now per the dep plan; wired up in later slices.
tiny_http = "0.12"
maud = "0.26"
# Render the live-overlay markdown for studio's review pane (HTML escaped).
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rust-embed = "8"
minijinja = "2"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1"
tempfile = "3"
regex = "1"
gethostname = "0.5"
libc = "0.2"
# ANSI styling for the stepped `rosita run` / `sync` output (TTY/NO_COLOR-aware).
# Already in the tree via clap, so no extra build cost.
anstyle = "1"
# Self-update (`rosita update`) + the throttled "update available" nudge on
# `rosita run`, via cargo-dist's own updater. `blocking` adds the sync wrappers
# (pulls in tokio); `github_releases` (default) targets our GitHub Releases.
axoupdater = { version = "0.10", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
